--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Cydiaa1</h1>
-							<p>”Ê—” Ã‰Ê»Ì „ÿ‰ÊŒ Cydiaa1</p>
+							<p>Official Cydia Repo</p>
 						</header>
 						<footer>
 							<ul class="icons">
@@ -32,7 +32,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; cydiaa1</li>
+							<li>&copy; cydiaa1 ,2017</li>
 						</ul>
 					</footer>
 
