--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Cydiaa1</h1>
-							<p>Official Cydia Repo</p>
-						</header>
+							<p>لاضافة سورس اضغط على علامة + تحت</p>
+						</header>
+
 						<footer>
 							<ul class="icons">
 								<li><a href="cydia://url/https://cydia.saurik.com/api/share#?source=https%3A%2F%2Fcydiaa1.github.io" class="fa-plus">Add Repo</a></li>
@@ -31,7 +32,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="copyright">
+						<ul class="جميع الحقوق محفوظة">
 							<li>&copy; cydiaa1 ,2017</li>
 						</ul>
 					</footer>
