--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<ul class="جميع الحقوق محفوظة">
-							<li>&copy; cydiaa1 ,2017</li>
+						<ul class="copyright">
+							<li>&copy; cydiaa1 ,2016-2017</li>
 						</ul>
 					</footer>
 
