--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Antique's Repo</title>
+		<title>جنوبي مطنوخ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/html5shiv.js"></script><![endif]-->
@@ -20,7 +20,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Cydiaa1</h1>
-							<p>لاضافة سورس اضغط على علامة + تحت</p>
+							<p>لاضافة السورس اضغط على علامة + تحت</p>
 						</header>
 
 						<footer>
@@ -33,7 +33,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; cydiaa1 ,2016-2017</li>
+							<li>&copy; cydiaa1 ,2016-2017 الحقوق محفوظة</li>
 						</ul>
 					</footer>
 
