--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Cydiaa1</h1>
-							<p>لاضافة السورس اضغط على علامة + تحت</p>
+							<p>اهلا بكم في سورس جنوبي مطنوخ 
+							لاضافة السورس اضغط على علامة + تحت</p>
 						</header>
 
 						<footer>
@@ -33,7 +34,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="copyright">
-							<li>&copy; cydiaa1 ,2016-2017 الحقوق محفوظة</li>
+							<li>&copy; cydiaa1 ,2017 الحقوق محفوظة</li>
 						</ul>
 					</footer>
 
