--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 						<header>
 							<span class="avatar"><img src="images/avatar.jpg" alt="" /></span>
 							<h1>Cydiaa1</h1>
-							<p>اهلا بكم في سورس جنوبي مطنوخ 
-							لاضافة السورس اضغط على علامة + تحت</p>
+							<p> لاضافة السورس اضغط على علامة + بالاسفل</p>
 						</header>
 
 						<footer>
